--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^22.10.7",
 		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -54,7 +55,10 @@
 		"storybook": "^8.5.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^2.6.0",
+		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^5.4.11",
