--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.48.0",
 		"drizzle-orm": "^0.38.4",
+		"mode-watcher": "^0.5.0",
 		"postgres": "^3.4.5"
 	},
 	"engines": {
