--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.48.0",
 		"drizzle-orm": "^0.38.4",
+		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.0",
 		"postgres": "^3.4.5"
 	},
