:technologist:chore(vscode): add extensions
anseki.vscode-color, formulahendry.auto-rename-tag, formulahendry.auto-close-tag

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,9 @@
 {
   "recommendations": [
     "svelte.svelte-vscode",
-    "adam-bender.commit-message-editor"
+    "adam-bender.commit-message-editor",
+    "anseki.vscode-color",
+    "formulahendry.auto-rename-tag",
+    "formulahendry.auto-close-tag"
   ]
 }
